construct Keras_RNN.py

--- a/Keras_RNN.ipynb
+++ b/Keras_RNN.ipynb
@@ -123,7 +123,7 @@
    "source": [
     "# Hyper parameters\n",
     "batch_size = 64\n",
-    "epochs = 1\n",
+    "epochs = 10\n",
     "dropout_prob = 0.5\n",
     "\n",
     "# Parameters for LSTM network\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -152,101 +152,98 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm_1 (LSTM)                (None, 1000, 256)         285696    \n",
+      "lstm_3 (LSTM)                (None, 1000, 256)         285696    \n",
       "_________________________________________________________________\n",
-      "batch_normalization_1 (Batch (None, 1000, 256)         1024      \n",
+      "batch_normalization_5 (Batch (None, 1000, 256)         1024      \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 1000, 256)         0         \n",
+      "lstm_4 (LSTM)                (None, 256)               525312    \n",
       "_________________________________________________________________\n",
-      "lstm_2 (LSTM)                (None, 1000, 256)         525312    \n",
+      "batch_normalization_6 (Batch (None, 256)               1024      \n",
       "_________________________________________________________________\n",
-      "batch_normalization_2 (Batch (None, 1000, 256)         1024      \n",
+      "dense_4 (Dense)              (None, 64)                16448     \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 1000, 256)         0         \n",
+      "dropout_3 (Dropout)          (None, 64)                0         \n",
       "_________________________________________________________________\n",
-      "lstm_3 (LSTM)                (None, 256)               525312    \n",
+      "batch_normalization_7 (Batch (None, 64)                256       \n",
       "_________________________________________________________________\n",
-      "batch_normalization_3 (Batch (None, 256)               1024      \n",
+      "dense_5 (Dense)              (None, 16)                1040      \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 256)               0         \n",
+      "dropout_4 (Dropout)          (None, 16)                0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 64)                16448     \n",
+      "batch_normalization_8 (Batch (None, 16)                64        \n",
       "_________________________________________________________________\n",
-      "batch_normalization_4 (Batch (None, 64)                256       \n",
-      "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 64)                0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 16)                1040      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_5 (Batch (None, 16)                64        \n",
-      "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 16)                0         \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 4)                 68        \n",
+      "dense_6 (Dense)              (None, 4)                 68        \n",
       "=================================================================\n",
-      "Total params: 1,357,268\n",
-      "Trainable params: 1,355,572\n",
-      "Non-trainable params: 1,696\n",
+      "Total params: 830,932\n",
+      "Trainable params: 829,748\n",
+      "Non-trainable params: 1,184\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
     "model = Sequential()\n",
-    "model.add(LSTM(lstm_outputs, return_sequences=True,\n",
+    "model.add(LSTM(lstm_outputs, activation= 'tanh', recurrent_activation='hard_sigmoid', \n",
+    "               dropout=0.5,  recurrent_dropout = 0.5, return_sequences=True,\n",
     "               input_shape=(timesteps, data_dim)))  # returns a sequence of vectors of dimension lstm_outputs\n",
     "model.add(BatchNormalization())\n",
-    "model.add(Dropout(dropout_prob))\n",
-    "model.add(LSTM(lstm_outputs, return_sequences=True))  # returns a sequence of vectors of dimension lstm_outputs\n",
+    "# model.add(LSTM(lstm_outputs, return_sequences=True))  # returns a sequence of vectors of dimension lstm_outputs\n",
+    "# model.add(BatchNormalization())\n",
+    "\n",
+    "model.add(LSTM(lstm_outputs, activation= 'tanh', recurrent_activation='hard_sigmoid', \n",
+    "               dropout=0.5,  recurrent_dropout = 0.5))  # return a single vector of dimension lstm_outputs\n",
     "model.add(BatchNormalization())\n",
-    "model.add(Dropout(dropout_prob))\n",
-    "model.add(LSTM(lstm_outputs))  # return a single vector of dimension 32\n",
-    "model.add(BatchNormalization())\n",
-    "model.add(Dropout(dropout_prob))\n",
+    "\n",
     "model.add(Dense(64, activation='relu'))\n",
-    "model.add(BatchNormalization())\n",
     "model.add(Dropout(dropout_prob))\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
     "model.add(Dense(16, activation='relu'))\n",
-    "model.add(BatchNormalization())\n",
     "model.add(Dropout(dropout_prob))\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
     "model.add(Dense(num_classes, activation='softmax'))\n",
     "model.summary()\n",
-    "model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])"
+    "model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
+    "\n",
+    "SAVED_MODEL_ARCHITECTURE_PATH = '/Users/WenHsu/Documents/ECE 239 NN/Project/project/saved_models/Keras_RNN_Architecture.json'\n",
+    "with open(SAVED_MODEL_ARCHITECTURE_PATH, 'w') as f:\n",
+    "    f.write(model.to_json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 1903 samples, validate on 212 samples\n",
-      "Epoch 1/1\n",
-      "1903/1903 [==============================] - 549s - loss: 2.1639 - acc: 0.2517 - val_loss: 1.3867 - val_acc: 0.2406\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "SAVED_MODEL_WEIGHTS_PATH = '/Users/WenHsu/Documents/ECE 239 NN/Project/project/saved_models/Keras_RNN.h5'\n",
+    "from keras.callbacks import ModelCheckpoint\n",
+    "checkpointer = ModelCheckpoint(filepath= SAVED_MODEL_WEIGHTS_PATH, \n",
+    "                               verbose=1, save_best_only=True)\n",
     "history = model.fit(X_train_valid, y_train_valid, batch_size=batch_size, \n",
-    "                    epochs=epochs, validation_split = 0.1, shuffle=True)"
+    "                    epochs=epochs, verbose=1, callbacks=[checkpointer], validation_split = 0.1, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 23.0248%\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# load the trained model\n",
+    "from keras.models import model_from_json\n",
+    "with open(SAVED_MODEL_ARCHITECTURE_PATH, 'r') as f:\n",
+    "    model = model_from_json(f.read())\n",
+    "\n",
+    "model.load_weights(SAVED_MODEL_WEIGHTS_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#### get predicted action for each signal in test set\n",
     "predictions = model.predict(X_test)\n",
